policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "demo-binding-test.example.com"
spec:
  policyName: "demo-policy.example.com"
  paramRef:
    name: rule-config
    namespace: demo
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: test
